# MediaNavToolkit

./: .env.example  .gitignore  README.md  pyproject.toml
analysis/: Dockerfile.wine32  annotate_nngine.py  annotate_phase2.py  annotate_phase3.py  annotations_data.py  brute_dll.c  brute_login.c  call_compound.c  call_ser2.c  call_ser_v2.c  call_ser_v3.c  call_ser_v4.c  call_serializer.c  call_snakeoil.c  cred_trace.c  credential_encoding_notes.md  crt_patch2.c  decode_gap_records.py  decode_run26_extra6.py  dump_bss.c  dump_fieldlist.c  dump_fields.c  dump_flags.c  dump_funcs.c  dump_raw.c  dump_rsa5.c  dump_types.c  dump_types2.c  encode_login.c  encode_login3.c  hook_dll.c  hook_writer.c  r6_login.c  r6_probe.c  r6_readfn.c  r6_strings.c  r6_swid.c  r7_nngine_harness.c  snakeoil_hook.c  test_0x80_live.py  (+24 more)
docs/: chain-encryption.md  license-system.md  mapformat.md  project-state.md  reverse-engineering.md  serializer.md
medianav_toolbox/: __init__.py  __main__.py  auth.py  bitstream.py  catalog.py  cli.py  config.py  content.py  content_download.py  crypto.py  device.py  device_status.py  download.py  fingerprint.py  igo_parser.py  igo_serializer.py  igo_serializer_model.py  installer.py  models.py  protocol.py  session.py  swid.py  wire_codec.py  wire_message.py
tests/: test_0x68_e2e.py  test_0x68_encryption.py  test_0x68_fresh_hmac.py  test_0x68_hmac_verified.py  test_0x68_live.py  test_auth.py  test_boot.py  test_catalog.py  test_cli.py  test_client.py  test_config.py  test_content.py  test_crypto.py  test_device.py  test_download.py  test_dynamic_wire.py  (+14 more)
(+81 files in other folders)
